--- a/MyPaintApp/PaintApp/Views/Pages/HomePage.xaml
+++ b/MyPaintApp/PaintApp/Views/Pages/HomePage.xaml
@@ -6,9 +6,52 @@
     xmlns:local="using:PaintApp.Views.Pages"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    xmlns:entities="using:PaintApp_Data.Entities"
     mc:Ignorable="d">
 
-    <Grid>
-        <TextBlock Text="This is Home Page"></TextBlock>
+    <Grid Padding="48">
+        <Grid.RowDefinitions>
+            <RowDefinition Height="Auto"/>
+            <RowDefinition Height="*"/>
+        </Grid.RowDefinitions>
+
+        <StackPanel Grid.Row="0" Margin="0,0,0,32">
+            <TextBlock Text="Xin chào!" Style="{StaticResource TitleTextBlockStyle}"/>
+            <TextBlock Text="Chọn hồ sơ của bạn để bắt đầu vẽ" Style="{StaticResource BodyTextBlockStyle}" Opacity="0.6"/>
+        </StackPanel>
+
+        <GridView Grid.Row="1" 
+                  ItemsSource="{x:Bind ViewModel.Profiles, Mode=OneWay}"
+                  SelectionMode="Single">
+
+            <GridView.ItemTemplate>
+                <DataTemplate x:DataType="entities:UserProfile">
+                    <Grid Width="200" Height="220" Background="{ThemeResource CardBackgroundFillColorDefaultBrush}"
+                          CornerRadius="8" Padding="16">
+                        <StackPanel VerticalAlignment="Center" Spacing="12">
+                            <PersonPicture DisplayName="{x:Bind UserName}" Height="80"/>
+
+                            <TextBlock Text="{x:Bind UserName}" 
+                                       Style="{StaticResource SubtitleTextBlockStyle}" 
+                                       HorizontalAlignment="Center"/>
+
+                            <TextBlock Text="Nhấn để chọn" 
+                                       HorizontalAlignment="Center" 
+                                       FontSize="12" Opacity="0.5"/>
+                        </StackPanel>
+                    </Grid>
+                </DataTemplate>
+            </GridView.ItemTemplate>
+        </GridView>
+
+        <Button Grid.Row="1" VerticalAlignment="Bottom" HorizontalAlignment="Right"
+                Style="{StaticResource AccentButtonStyle}"
+                Click="OnAddProfileClicked"
+                Width="50" Height="50" CornerRadius="25">
+            <FontIcon Glyph="&#xE710;"/>
+        </Button>
+
+        <ProgressRing Grid.Row="1" IsActive="{x:Bind ViewModel.IsLoading, Mode=OneWay}" 
+                      Width="50" Height="50" HorizontalAlignment="Center" VerticalAlignment="Center"/>
     </Grid>
 </Page>
