Chinh bindign cua nut luu va them code behind cua ham luu voi su kien click

--- a/MyPaintApp/PaintApp/Views/Pages/DrawingPage.xaml
+++ b/MyPaintApp/PaintApp/Views/Pages/DrawingPage.xaml
@@ -57,9 +57,7 @@
                 </AppBarButton.Flyout>
             </AppBarButton>
 
-            <AppBarButton Icon="Save" Label="Lưu" 
-                  Command="{x:Bind ViewModel.SaveDrawingCommand}"
-                  CommandParameter="{x:Bind DrawingCanvas.Children}"/>
+            <AppBarButton Icon="Save" Label="Lưu" Click="OnSaveButtonClicked"/>
 
             <AppBarButton Icon="Copy" Label="Templates">
                 <AppBarButton.Flyout>
