--- a/MyPaintApp/PaintApp/Views/Pages/DrawingPage.xaml
+++ b/MyPaintApp/PaintApp/Views/Pages/DrawingPage.xaml
@@ -84,10 +84,12 @@
                                                 <TextBlock Text="{Binding Name}" VerticalAlignment="Center"/>
                                             </StackPanel>
 
-                                            <Button Grid.Column="1" Content="X" 
-                                            Click="OnDeleteTemplateClick" 
-                                            Tag="{Binding Id}"
-                                            Background="Transparent" BorderThickness="0"/>
+                                            <Button Grid.Column="1"
+                                                    Click="OnDeleteTemplateClick" 
+                                                    Tag="{Binding Id}"
+                                                    Background="Transparent" BorderThickness="0">
+                                                <FontIcon Glyph="&#xE74D;" Foreground="Red" FontSize="14"/>
+                                            </Button>
                                         </Grid>
                                     </DataTemplate>
                                 </ListView.ItemTemplate>
