--- a/MyPaintApp/PaintApp/Views/Pages/DashboardPage.xaml
+++ b/MyPaintApp/PaintApp/Views/Pages/DashboardPage.xaml
@@ -93,6 +93,10 @@
                             <StackPanel Grid.Column="2" Orientation="Horizontal" Spacing="8">
                                 <Button Content="Chọn &amp; Vẽ" Click="OnSelectProfileClicked" Tag="{x:Bind}"/>
 
+                                <Button Click="OnEditProfileClicked" Tag="{x:Bind}" Background="Transparent" BorderThickness="0" ToolTipService.ToolTip="Chỉnh sửa Profile">
+                                    <FontIcon Glyph="&#xE70F;"/>
+                                </Button>
+
                                 <Button Click="OnDeleteProfileClicked" Tag="{x:Bind}" Background="Transparent" BorderThickness="0">
                                     <FontIcon Glyph="&#xE74D;" Foreground="Red"/>
                                 </Button>
