--- a/MyPaintApp/PaintApp/Views/Pages/HomePage.xaml
+++ b/MyPaintApp/PaintApp/Views/Pages/HomePage.xaml
@@ -42,9 +42,9 @@
                                        Style="{StaticResource SubtitleTextBlockStyle}" 
                                        HorizontalAlignment="Center"/>
 
-                            <TextBlock Text="Nhấn để chọn" 
-                                       HorizontalAlignment="Center" 
-                                       FontSize="12" Opacity="0.5"/>
+                            <StackPanel Grid.Column="2" Orientation="Horizontal" Spacing="8">
+                                <Button Content="Chọn &amp; Vẽ" Click="OnSelectProfileClicked" Tag="{x:Bind}"/>
+                            </StackPanel>
                         </StackPanel>
                     </Grid>
                 </DataTemplate>
